# wlx_monitor_tui

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
aur/: PKGBUILD
crates/xwlm-cfg/: Cargo.toml
crates/xwlm-cfg/src/: lib.rs  parse.rs
crates/xwlm-cfg/src/extract/: hyprland.rs  mod.rs
fedora/: xwlm.spec
src/: app.rs  compositor.rs  config.rs  main.rs  setup.rs  state.rs  ui.rs
src/tui/: key_binds.rs  layout.rs
src/tui/panels/: left.rs
