[package]
name = "wlx_monitor_tui"
version = "0.1.0"
edition = "2024"
description = "A TUI for managing Wayland monitor configurations (Hyprland, Sway, River)"
license = "MIT"
repository = "https://github.com/x34-dzt/wlx_monitor_tui"
keywords = ["wayland", "monitor", "tui", "hyprland", "sway"]
categories = ["command-line-utilities"]

[[bin]]
name = "xwlm"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.5"
ratatui = "0.30.0"
crossterm = "0.29"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
wlx_monitors = "0.1.5"
